--- a/sass/elements/_communityfeed.scss
+++ b/sass/elements/_communityfeed.scss
@@ -20,7 +20,11 @@
         right: 0;
         top: 0;
         height: 100vh;
-        overflow-y: scroll;
+
+        &:hover {
+            overflow-y: auto;
+        }
+
 
     }
 
