--- a/sass/elements/_dashboard.scss
+++ b/sass/elements/_dashboard.scss
@@ -12,7 +12,7 @@
         background-repeat: no-repeat;
         height: 100vh;
         color: #fff;
-        overflow-y: scroll;
+
         background-attachment: fixed;
     }
 }
@@ -61,12 +61,14 @@
     height: auto;
     color: #fff;
     border-radius: 20px;
-    overflow-y: scroll;
     padding-top: 10px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
+    &:hover {
+        overflow-y: auto;
+    }
+
     @include mixins.tablet-only {
-        overflow-y: scroll;
         height: 55vh;
         width: 70%;
         padding-top: 0px;
@@ -75,7 +77,6 @@
 
 
     @include mixins.desktop-only {
-        overflow-y: scroll;
         position: fixed;
         height: 95vh;
         width: 29%;
